# torchfont

./: .gitignore  .gitmodules  .ignore  .readthedocs.yaml  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  asv.conf.json  mise.toml  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json  oncreate.sh
.github/: copilot-instructions.md  dependabot.yml
.github/scripts/: install-linux-deps.sh  install-linux-wheel-deps.sh
.github/workflows/: ci.yml  docs.yml
benchmarks/: _helpers.py  conftest.py  test_bench_dataset.py  test_bench_transforms.py
docs/: AGENTS.md  index.md
docs/.vitepress/: config.mts
docs/en/: index.md
docs/en/examples/: index.md
docs/en/guide/: dataloader.md  dataset.md  getting-started.md  git-repos.md  glyph-data-format.md  google-fonts.md  subset.md  what-is-torchfont.md
docs/en/reference/: datasets.md  glyphsets.md  io.md  transforms.md  utils.md
docs/ja/: index.md
docs/ja/examples/: index.md
docs/ja/guide/: dataloader.md  dataset.md  getting-started.md  git-repos.md  glyph-data-format.md  google-fonts.md  subset.md  what-is-torchfont.md
docs/ja/reference/: datasets.md  glyphsets.md  io.md  transforms.md  utils.md
examples/: font_awesome.py  google_fonts.py  local_fonts.py  material_design_icons.py  source_han_code_jp.py  source_han_sans.py  subset_by_targets.py  variable_glyphs.py
src/: bitmap.rs  bounds.rs  cubic_to_quad.rs  dataset.rs  error.rs  lib.rs  merge_curves.rs  outline.rs  overlap.rs  pen.rs  quad_to_cubic.rs  render.rs  transforms.rs
src/curves/: cubic_to_quad.rs  merge_curves.rs  mod.rs  quad_to_cubic.rs
src/dataset/: bitmap.rs  classes.rs  counts.rs  discovered_font.rs  discovery.rs  entry.rs  fixed.rs  index.rs  io.rs  mod.rs  reader.rs  targets.rs  variable.rs
src/font/: data.rs  entry.rs  extract.rs  glyph.rs  location.rs  mod.rs  reader.rs  table.rs  variation.rs
src/geom/: bounds.rs  encoding.rs  mod.rs  outline.rs  subpath.rs
src/instance_fn/: grid.rs  locations.rs  mod.rs  named.rs
src/outline/: encoding.rs  extract.rs  mod.rs  model.rs  point.rs
src/py/: callable.rs  dataset.rs  error.rs  glyphsets.rs  mod.rs  targets.rs  transforms.rs
src/py/dataset/: build.rs  fixed.rs  mod.rs  variable.rs
src/py/instance_fn/: callback.rs  mod.rs
src/py/transform/: load.rs  mod.rs
src/skia/: mod.rs  remove_overlaps.rs  render_bitmap.rs
src/transform/: cubic_to_quad.rs  load.rs  merge_curves.rs  mod.rs  quad_to_cubic.rs  remove_overlaps.rs  render_bitmap.rs  subpath.rs
src/transform/curves/: cubic_to_quad.rs  merge_curves.rs  mod.rs  quad_to_cubic.rs
tests/: AGENTS.md  conftest.py  test_dataset.py  test_examples.py  test_folder.py  test_git_io.py  test_glyphsets.py  test_google_fonts.py  test_repo.py  test_transforms.py  test_utils.py
tests/benchmarks/: _helpers.py  conftest.py  test_bench_dataset.py
tests/fonts/nocolortest/: create_font.py
tests/google_fonts/: conftest.py  test_merge_curves.py  test_remove_overlaps.py
tests/transforms/: conftest.py
tests/transforms/bitmap/: test_render_bitmap.py
tests/transforms/curves/: _helpers.py  test_cubic_to_quad.py  test_merge_curves.py  test_quad_to_cubic.py  test_remove_overlaps.py
tests/transforms/geometric/: _helpers.py  test_affine.py  test_horizontal_flip.py  test_random_affine.py  test_random_coord_jitter.py  test_random_horizontal_flip.py  test_random_vertical_flip.py  test_vertical_flip.py
tests/transforms/outline/: test_patchify.py  test_remove_overlaps.py
tests/transforms/patch/: test_patchify.py
tests/transforms/render/: _helpers.py
tests/transforms/subpath/: _helpers.py  test_normalize_subpath_start_points.py  test_randomize_subpath_order.py  test_randomize_subpath_start_points.py
torchfont/: __init__.py  _torchfont.pyi  batch.py  datasets.py  glyphsets.py  instance_fn.py  io.py  metadata.py  sample.py  transforms.py  utils.py  variation.py
torchfont/datasets/: __init__.py  folder.py  google_fonts.py  metadata.py  repo.py
torchfont/io/: git.py
torchfont/transforms/: __init__.py  bitmap.py  curves.py  geometric.py  load.py  outline.py  patch.py  render.py  subpath.py  transforms.py
