[package]
name = "torchfont"
version = "0.9.4"
edition = "2024"
description = "Datasets, Transforms and Models specific to Vector Fonts"
license = "MIT"
repository = "https://github.com/torchfont/torchfont"

[lib]
name = "_torchfont"
crate-type = ["cdylib"]

[dependencies]
ignore = "0.4.25"
memmap2 = "0.9.10"
numpy = "0.28.0"
shellexpand = "3.1.2"
skia-safe = "0.97.0"
skrifa = "0.42.1"
urlencoding = "2.1.3"
walkdir = "2.5.0"

[dependencies.pyo3]
version = "0.28.3"
features = ["abi3-py310"]
