[package]
name = "torchfont"
version = "0.10.2"
edition = "2024"
description = "Datasets, Transforms and Models specific to Vector Fonts"
license = "MIT"
repository = "https://github.com/torchfont/torchfont"

[lib]
name = "_torchfont"
crate-type = ["cdylib"]

[dependencies]
ignore = "0.4.26"
memmap2 = "0.9.10"
numpy = "0.28.0"
shellexpand = "3.1.2"
# Intentionally non-optional: PyPI wheels are compiled binaries and Cargo
# features cannot be selected via pip install.
skia-safe = "0.99.0"
skrifa = "0.43.1"
tiny-skia = { version = "0.12.0", default-features = false, features = [
    "simd",
    "std",
] }
urlencoding = "2.1.3"
walkdir = "2.5.0"
google-fonts-glyphsets = { git = "https://github.com/googlefonts/glyphsets" }

[dependencies.pyo3]
version = "0.28.3"
features = ["abi3-py310"]
