[package]
name = "torchfont"
version = "0.10.2"
edition = "2024"
description = "Datasets, Transforms and Models specific to Vector Fonts"
license = "MIT"
repository = "https://github.com/torchfont/torchfont"

[lib]
name = "_torchfont"
crate-type = ["cdylib"]

[dependencies]
ignore = "0.4.28"
memmap2 = "0.9.11"
numpy = "0.29.0"
shellexpand = "3.1.2"
# Intentionally non-optional: PyPI wheels are compiled binaries and Cargo
# features cannot be selected via pip install.
skia-safe = "0.99.0"
skrifa = "0.44.0"
tiny-skia = { version = "0.12.0", default-features = false, features = [
    "simd",
    "std",
] }
google-fonts-glyphsets = { git = "https://github.com/googlefonts/glyphsets" }

[dependencies.pyo3]
version = "0.29.0"
features = ["abi3-py310"]
