[project]
name = "torchfont"
description = "Datasets, Transforms and Models specific to Vector Fonts"
readme = "README.md"
authors = [{ name = "Takumu Fujioka", email = "fjktkm@gmail.com" }]
requires-python = ">=3.10"
keywords = [
    "pytorch",
    "vector-fonts",
    "fonts",
    "glyphs",
    "google-fonts",
    "ttf",
    "otf",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = ["torch>=2.3.0"]

[project.urls]
Repository = "https://github.com/torchfont/torchfont"
Releases = "https://github.com/torchfont/torchfont/releases"

[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "asv>=0.6.5",
    "lightning>=2.6.0",
    "maturin>=1.10.2",
    "numpy>=2.2.6",
    "pytest>=8.4.2",
    "pytest-benchmark>=5.1.0",
    "ruff>=0.12.4",
    "tqdm>=4.67.1",
    "ty>=0.0.12",
    "types-tqdm>=4.67.0.20250809",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
filterwarnings = ["ignore:.*fork.*:DeprecationWarning"]
testpaths = ["tests"]

[tool.ruff]
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213", "EXE002"]

[tool.ruff.lint.per-file-ignores]
"benchmarks/**/*.py" = ["ARG002", "D", "PLR2004", "RUF012", "S101", "T201"]
"examples/**/*.py" = ["D", "T201"]
"torchfont/datasets/*.py" = ["PLR0913"]
"tests/**/*.py" = ["D", "PLR2004", "S101"]

[tool.maturin]
module-name = "torchfont._torchfont"

[tool.setuptools.package-data]
"torchfont" = ["py.typed"]

[tool.ty.rules]
invalid-method-override = "ignore"
